// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="resLink--all-name"
          >
            All
          </span>
          <span
            className="resLink-alertBadge"
          >
            7
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource4"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource4
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:36:03.000Z"
              title="2017-12-21 15:36"
            >
              &lt;5s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource9"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource9
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:58.000Z"
              title="2017-12-21 15:35"
            >
              &lt;15s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource19"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource19
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:48.000Z"
              title="2017-12-21 15:35"
            >
              &lt;30s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource29"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource29
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:38.000Z"
              title="2017-12-21 15:35"
            >
              &lt;30s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource39"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource39
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:28.000Z"
              title="2017-12-21 15:35"
            >
              &lt;45s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource49"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource49
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:18.000Z"
              title="2017-12-21 15:35"
            >
              &lt;1m
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource54"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource54
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:13.000Z"
              title="2017-12-21 15:35"
            >
              &lt;1m
            </time>
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<section
  className="Sidebar is-closed"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="resLink--all-name"
          >
            All
          </span>
          
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders list of resources 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="resLink--all-name"
          >
            All
          </span>
          <span
            className="resLink-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            vigoda
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21 15:36"
            >
              &lt;5s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/snack"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            snack
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21 15:35"
            >
              &lt;15s
            </time>
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="resLink--all-name"
          >
            All
          </span>
          <span
            className="resLink-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            vigoda
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            —
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/snack"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            snack
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            —
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders resources with manual trigger mode 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="resLink--all-name"
          >
            All
          </span>
          <span
            className="resLink-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotManualBuilding manual"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-manual-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            vigoda
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21 15:36"
            >
              &lt;5s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/snack"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotManualBuilding manual"
              fill="#93a1a1"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-manual-building.svg
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            snack
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21 15:35"
            >
              &lt;15s
            </time>
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;
